# AiTester

./: .gitignore  README.md  install-k8s-tools.sh
.github/workflows/: ci.yml  pr-check.yml  quality-report.yml
backend/ai_service/: Dockerfile  pyproject.toml  requirements.txt
backend/ai_service/tests/: test_main.py
backend/auth_service/: Dockerfile  auth_test.go  bad_example.go  go.mod
backend/execution_agent/: Dockerfile  pyproject.toml  requirements.txt
backend/execution_master/: Dockerfile  execution_test.go  go.mod
backend/integration_service/: Dockerfile  pyproject.toml  requirements.txt
backend/notification_service/: .golangci.yml  Dockerfile  go.mod  notification_test.go
backend/test_management/: Dockerfile  bad_example.py  main.py  pyproject.toml  requirements.txt
database/: .env.example  test_migration.py  validate_task.py
database/migrations/: V1__initial_schema.sql  V2__test_cases_table.sql
docs/Reports/: task_1.3.2_test_cases_api_test_report.md
docs/TestReport/: Task_1.3.3_测试报告.md  task_1.2.5_auth_ui_test_report.md  task_1.2.6_auth_form_logic_test_report.md  task_1.2.7_main_navigation_test_report.md  (+1 more)
frontend/: .eslintrc.cjs  .eslintrc.js  index.html  package.json  vite.config.ts  vitest.config.ts
k8s/: namespace.yaml
requestDocuments/: README.md  architecture_design.md  hyper-detailed_atomic_task_list.md  ui_design_document.md
requestDocumets/: ai_developer_prompt_template copy.md  ai_developer_prompt_template.md  necessary_features.md  prompt.md  storage_design_plan.md
tests/: test_code_structure.sh  test_kind_cluster.sh
(+118 files in other folders)
